@@ -138,6 +138,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [EEs] Add support for *sql exporter
   * [ApierS] Correct handle error in case of APIerSv1.GetActionTriggers
   * [SessionS] Added extra condition to determine if the increment is considered the roundIncrement
+  * [SessionS] Cloned the charging interval added on EventCost merge 
   
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
